--- a/blog_src/_includes/head.html
+++ b/blog_src/_includes/head.html
@@ -76,8 +76,15 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="{{ '/assets/css/:THEME.css' | replace: ':THEME', site.theme | relative_url }}">
 
+  
+<!-- Custom style (after theme CSS) -->
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+
   <!-- Web Font -->
   <link rel="stylesheet" href="{{ site.data.origin[type].webfonts | relative_url }}">
+
+  <!-- ここに追加 -->
+ <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap"> -->
 
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="{{ site.data.origin[type].fontawesome.css | relative_url }}">
